[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Shwumatik/Shwumatik.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Levels/Scripts/Title_screen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Title_screen" type="Node"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_top = 73.0
margin_right = 640.0
margin_bottom = 170.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Yorick"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_top = 163.0
margin_right = 640.0
margin_bottom = 188.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.341176, 0.341176, 0.341176, 1 )
custom_fonts/font = SubResource( 5 )
text = "To (not) be Out of the Box"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_top = 451.0
margin_right = 640.0
margin_bottom = 476.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.341176, 0.341176, 0.341176, 1 )
custom_fonts/font = SubResource( 8 )
text = "A game by: KeichiTS and Jaspior for Global Game Jam - 2022."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 220.0
margin_top = 277.0
margin_right = 420.0
margin_bottom = 332.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select_level" type="Button" parent="."]
margin_left = 220.0
margin_top = 325.0
margin_right = 420.0
margin_bottom = 380.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Select Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Select_level" to="." method="_on_Start2_pressed"]
